Add OpenAI dependency and implement SVG generation API

--- a/src/pages/generator.astro
+++ b/src/pages/generator.astro
@@ -24,10 +24,7 @@ import Layout from "../layouts/Layout.astro";
       <div class="card bg-base-100 shadow-xl">
         <div class="card-body p-0">
           <div class="mockup-code h-full">
-            <pre id="svg-output" data-prefix="$"><code>svg width="200" height="200"</code></pre>
-            <pre
-              data-prefix=">"><code>circle cx="100" cy="100" r="80"</code></pre>
-            <pre data-prefix=">"><code>fill="#60a5fa"</code></pre>
+            <pre id="svg-output" data-prefix="$"></pre>
           </div>
         </div>
       </div>
