--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,15 @@ import Menu from "../components/menu.astro";
   </head>
   <body class="h-full">
     <Menu />
+{
+    Astro.locals.user && (
+      <form method="POST" action="/api/logout" class="m-0 p-0 ml-4">
+        <button type="submit" class="btn btn-primary">
+          Logout
+        </button>
+      </form>
+    )
+  }
     <div class="h-full flex flex-col min-h-0">
       <div class="flex-1 min-h-0">
         <slot />
